Pushing changes till detection of sparse and dense matrices/vectors.